--- a/asciidoc/03-detailed-design.html
+++ b/asciidoc/03-detailed-design.html
@@ -957,7 +957,7 @@ Secchio in aggiunta al resto del tuo turno </em></p>
 <h4 id="_modellazione_della_divisione_del_turno">Modellazione della divisione del turno</h4>
 <div id="phases-turn" class="imageblock text-center">
 <div class="content">
-<img src="assets/images/TurnStates.svg" alt="TurnStates">
+<img src="TurnStates.svg" alt="TurnStates">
 </div>
 <div class="title">Figura 10. Diagramma degli stati delle fasi di un turno</div>
 </div>
@@ -1570,7 +1570,7 @@ Ad esempio, solo quando è possibile il piazzamento di un pattern la griglia è 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-18 23:50:54 +0200
+Last updated 2024-09-18 23:56:08 +0200
 </div>
 </div>
 </body>
